added events information

--- a/data_preprocessing/weather_prepocessing.ipynb
+++ b/data_preprocessing/weather_prepocessing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,7 @@
     "# get weather data files (zip and tar.gz)\n",
     "file_list = []\n",
     "for root, dirs, files in os.walk('../data'):\n",
+    "    files.sort()\n",
     "    for file in files:\n",
     "        if 'weather' in file.lower():  # Search for the string 'weather' (case insensitive)\n",
     "            file_list.append(os.path.join(root, file))\n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
