--- a/data_preprocessing/traffic_preprocessing.ipynb
+++ b/data_preprocessing/traffic_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "traffic_file_archives = [\"../data/citypulse_traffic_raw_data_aarhus_aug_sep_2014.tar.gz\",\n",
     "                         \"../data/citypulse_traffic_raw_data_aarhus_oct_nov_2014.zip\",\n",
-    "                         \"../data/citypulse_traffic_raw_data_surrey_feb_jun_2014.tar.gz\",\n",
     "                         ]\n",
     "\n",
     "headers = [\"status\", \"avg_measured_time\", \"avg_speed\",\t\"ext_id\",\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20714493, 9)"
+       "(11520409, 9)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +197,7 @@
        "4  2014-08-01T08:10:00              3  20747545     158324  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,13 +205,22 @@
    "source": [
     "traffic_data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traffic_data.to_csv(\"../data/aarhus_traffic_data_aug_nov_2014.csv\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "usd_ai",
+   "display_name": "masters",
    "language": "python",
-   "name": "python3"
+   "name": "masters"
   },
   "language_info": {
    "codemirror_mode": {
@@ -224,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
