--- a/data_preprocessing/weather_prepocessing.ipynb
+++ b/data_preprocessing/weather_prepocessing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
     "for root, dirs, files in os.walk('../data'):\n",
     "    files.sort()\n",
     "    for file in files:\n",
-    "        if 'weather' in file.lower():  # Search for the string 'weather' (case insensitive)\n",
+    "        if 'raw_weather' in file.lower():  # Search for the string 'weather' (case insensitive)\n",
     "            file_list.append(os.path.join(root, file))\n",
     "\n",
     "print(file_list)"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -181,18 +181,29 @@
     "                all_data.append(variable_final)\n",
     "\n",
     "        # Concatenate all DataFrames with an outer join to match indices (Datetime)\n",
-    "        weather_data1 = pd.concat(all_data, axis=1, join='outer')\n",
+    "        weather_data2 = pd.concat(all_data, axis=1, join='outer')\n",
     "        \n",
     "# Print the final combined DataFrame\n",
-    "print(weather_data1)"
+    "print(weather_data2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving data for EDA\n",
+    "csv = pd.concat([weather_data1,weather_data1])\n",
+    "csv.to_csv(\"../data/aarhus_weather_data_combined.csv\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "masters",
    "language": "python",
-   "name": "python3"
+   "name": "masters"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
