updated information on pollution

--- a/data_preprocessing/pollution_processing.ipynb
+++ b/data_preprocessing/pollution_processing.ipynb
@@ -69,21 +69,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ozone</th>\n",
+       "      <th>particullate_matter</th>\n",
+       "      <th>carbon_monoxide</th>\n",
+       "      <th>sulfure_dioxide</th>\n",
+       "      <th>nitrogen_dioxide</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>94</td>\n",
+       "      <td>49</td>\n",
+       "      <td>44</td>\n",
+       "      <td>87</td>\n",
+       "      <td>10.104986</td>\n",
+       "      <td>56.231721</td>\n",
+       "      <td>2014-08-01 00:05:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>106</td>\n",
+       "      <td>97</td>\n",
+       "      <td>48</td>\n",
+       "      <td>47</td>\n",
+       "      <td>86</td>\n",
+       "      <td>10.104986</td>\n",
+       "      <td>56.231721</td>\n",
+       "      <td>2014-08-01 00:10:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>107</td>\n",
+       "      <td>95</td>\n",
+       "      <td>49</td>\n",
+       "      <td>42</td>\n",
+       "      <td>85</td>\n",
+       "      <td>10.104986</td>\n",
+       "      <td>56.231721</td>\n",
+       "      <td>2014-08-01 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>103</td>\n",
+       "      <td>90</td>\n",
+       "      <td>51</td>\n",
+       "      <td>44</td>\n",
+       "      <td>87</td>\n",
+       "      <td>10.104986</td>\n",
+       "      <td>56.231721</td>\n",
+       "      <td>2014-08-01 00:20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>105</td>\n",
+       "      <td>94</td>\n",
+       "      <td>49</td>\n",
+       "      <td>39</td>\n",
+       "      <td>82</td>\n",
+       "      <td>10.104986</td>\n",
+       "      <td>56.231721</td>\n",
+       "      <td>2014-08-01 00:25:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ozone  particullate_matter  carbon_monoxide  sulfure_dioxide  \\\n",
+       "0    101                   94               49               44   \n",
+       "1    106                   97               48               47   \n",
+       "2    107                   95               49               42   \n",
+       "3    103                   90               51               44   \n",
+       "4    105                   94               49               39   \n",
+       "\n",
+       "   nitrogen_dioxide  longitude   latitude            timestamp  \n",
+       "0                87  10.104986  56.231721  2014-08-01 00:05:00  \n",
+       "1                86  10.104986  56.231721  2014-08-01 00:10:00  \n",
+       "2                85  10.104986  56.231721  2014-08-01 00:15:00  \n",
+       "3                87  10.104986  56.231721  2014-08-01 00:20:00  \n",
+       "4                82  10.104986  56.231721  2014-08-01 00:25:00  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "headers = ['ozone','particullate_matter', 'carbon_monoxide', \n",
     "           'sulfure_dioxide', 'nitrogen_dioxide', 'longitude', 'latitude', 'timestamp']\n",
     "\t\n",
     "pollution_data = pd.concat([extract_csv_files(archive, headers)\n",
-    "                for archive in file_list])"
+    "                for archive in file_list])\n",
+    "\n",
+    "pollution_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +344,7 @@
        "max        2.150000e+02  1.030367e+01  5.625626e+01  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
