started to understand geolocation weather data

--- a/analysis/EDA_smart_city.ipynb
+++ b/analysis/EDA_smart_city.ipynb
@@ -2485,6 +2485,30 @@
     "plt.title('Pollution-Traffic Correlation Matrix')\n",
     "plt.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pollution and location\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "from folium.plugins import HeatMap\n",
+    "\n",
+    "AARHUS_GEOLOCATION = [56.16182966470494, 10.197421860666816]\n",
+    "\n",
+    "def generateBaseMap(default_location=AARHUS_GEOLOCATION, default_zoom=12):\n",
+    "    base_map = folium.Map(location=default_location, control_scale=True, zoom_start=default_zoom)\n",
+    "    return base_map"
+   ]
   }
  ],
  "metadata": {
