--- a/analysis/traffic_geo_viz.ipynb
+++ b/analysis/traffic_geo_viz.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tarfile\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from zipfile import ZipFile\n",
     "from typing import List\n",
     "\n",
@@ -7435,9 +7434,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "masters",
+   "display_name": "usd_ai",
    "language": "python",
-   "name": "masters"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -7449,7 +7448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
