data_analysis/comprehesive_eda.ipynb

--- a/data_analysis/comprehesive_eda.ipynb
+++ b/data_analysis/comprehesive_eda.ipynb
@@ -5,13 +5,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EDA Smart City"
+    "## Exploratory Data Analysis \n",
+    "\n",
+    "Included in this file is exploratory data analysis on the following datasets: Traffic, Weather, Pollution"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -128,7 +125,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "month_means = sampled_data.reset_index().groupby(\n",
     "    pd.Grouper(key=\"timestamp\", freq=\"1W\"))[numeric_cols].mean().reset_index()\n",
     "print(month_means.head())\n",
@@ -137,6 +133,25 @@
     "                 figsize = (20,5), \n",
     "                 subplots=True, \n",
     "                 title=\"Weekly Average\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traffic_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traffic_df['hour'] = traffic_df.index.hour\n",
+    "traffic_df['day'] = traffic_df.index.day"
    ]
   },
   {
