--- a/data_extraction/traffic.ipynb
+++ b/data_extraction/traffic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,27 +62,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11520409, 9)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "traffic_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>status</th>\n",
+       "      <th>avg_measured_time</th>\n",
+       "      <th>avg_speed</th>\n",
+       "      <th>ext_id</th>\n",
+       "      <th>median_measured_time</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>vehicle_count</th>\n",
+       "      <th>_id</th>\n",
+       "      <th>report_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>74</td>\n",
+       "      <td>50</td>\n",
+       "      <td>668</td>\n",
+       "      <td>74</td>\n",
+       "      <td>2014-08-01T07:50:00</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20746220</td>\n",
+       "      <td>158324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>73</td>\n",
+       "      <td>50</td>\n",
+       "      <td>668</td>\n",
+       "      <td>73</td>\n",
+       "      <td>2014-08-01T07:55:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>20746392</td>\n",
+       "      <td>158324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>61</td>\n",
+       "      <td>60</td>\n",
+       "      <td>668</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2014-08-01T08:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20746723</td>\n",
+       "      <td>158324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>61</td>\n",
+       "      <td>60</td>\n",
+       "      <td>668</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2014-08-01T08:05:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20747172</td>\n",
+       "      <td>158324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>63</td>\n",
+       "      <td>58</td>\n",
+       "      <td>668</td>\n",
+       "      <td>63</td>\n",
+       "      <td>2014-08-01T08:10:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20747545</td>\n",
+       "      <td>158324</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  status  avg_measured_time  avg_speed  ext_id  median_measured_time  \\\n",
+       "0     OK                 74         50     668                    74   \n",
+       "1     OK                 73         50     668                    73   \n",
+       "2     OK                 61         60     668                    61   \n",
+       "3     OK                 61         60     668                    61   \n",
+       "4     OK                 63         58     668                    63   \n",
+       "\n",
+       "             timestamp  vehicle_count       _id  report_id  \n",
+       "0  2014-08-01T07:50:00              5  20746220     158324  \n",
+       "1  2014-08-01T07:55:00              6  20746392     158324  \n",
+       "2  2014-08-01T08:00:00              4  20746723     158324  \n",
+       "3  2014-08-01T08:05:00              1  20747172     158324  \n",
+       "4  2014-08-01T08:10:00              3  20747545     158324  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "traffic_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "status                  0\n",
+       "avg_measured_time       0\n",
+       "avg_speed               0\n",
+       "ext_id                  0\n",
+       "median_measured_time    0\n",
+       "timestamp               0\n",
+       "vehicle_count           0\n",
+       "_id                     0\n",
+       "report_id               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# missing data\n",
     "traffic_data.isna().sum()"
@@ -90,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +249,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "masters",
    "language": "python",
-   "name": "python3"
+   "name": "masters"
   },
   "language_info": {
    "codemirror_mode": {
@@ -114,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
