removed hardcoded file references to url

--- a/data_extraction/traffic.ipynb
+++ b/data_extraction/traffic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,23 +10,27 @@
     "import pandas as pd\n",
     "import requests\n",
     "from zipfile import ZipFile\n",
-    "from typing import List"
+    "from typing import List\n",
+    "import requests\n",
+    "from io import BytesIO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_csv_files(archive_path: str, headers: List[str]) -> pd.DataFrame:\n",
-    "    if archive_path.endswith(\".tar.gz\"):\n",
-    "        with tarfile.open(archive_path, \"r:gz\") as tar:\n",
+    "def extract_csv_files(file_url_path: str, headers: List[str]) -> pd.DataFrame:\n",
+    "    response = requests.get(file_url_path)\n",
+    "    if file_url_path.endswith(\".tar.gz\"):\n",
+    "        \n",
+    "        with tarfile.open(fileobj=BytesIO(response.content), mode='r:gz') as tar:\n",
     "            output = pd.concat([pd.read_csv(tar.extractfile(file))\n",
     "                               for file in tar.getnames()])\n",
     "\n",
-    "    if archive_path.endswith(\".zip\"):\n",
-    "        zip_file = ZipFile(archive_path)\n",
+    "    if file_url_path.endswith(\".zip\"):\n",
+    "        zip_file = ZipFile(BytesIO(response.content))\n",
     "\n",
     "        output = pd.concat([pd.read_csv(zip_file.open(csv_file), header=None)\n",
     "                  for csv_file in zip_file.namelist()])\n",
@@ -38,13 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "traffic_file_archives = [\"../raw_datasets/citypulse_traffic_raw_data_aarhus_aug_sep_2014.tar.gz\",\n",
-    "                         \"../raw_datasets/citypulse_traffic_raw_data_aarhus_oct_nov_2014.zip\",\n",
-    "                         ]\n",
+    "\n",
+    "traffic_url_archives = [\"http://iot.ee.surrey.ac.uk:8080/datasets/traffic/traffic_oct_nov/citypulse_traffic_raw_data_aarhus_oct_nov_2014.zip\",\n",
+    "                        \"http://iot.ee.surrey.ac.uk:8080/datasets/traffic/traffic_june_sep/citypulse_traffic_raw_data_aarhus_aug_sep_2014.tar.gz\"\n",
+    "                        ]\n",
     "\n",
     "headers = [\"status\", \"avg_measured_time\", \"avg_speed\",\t\"ext_id\",\n",
     "           \"median_measured_time\", \"timestamp\", \"vehicle_count\", \"_id\", \"report_id\"]"
@@ -52,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "traffic_data = pd.concat([extract_csv_files(archive, headers)\n",
-    "                for archive in traffic_file_archives])"
+    "                for archive in traffic_url_archives])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +76,7 @@
        "(11520409, 9)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -121,61 +126,61 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>OK</td>\n",
-       "      <td>74</td>\n",
-       "      <td>50</td>\n",
+       "      <td>78</td>\n",
+       "      <td>47</td>\n",
        "      <td>668</td>\n",
-       "      <td>74</td>\n",
-       "      <td>2014-08-01T07:50:00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>20746220</td>\n",
+       "      <td>78</td>\n",
+       "      <td>2014-10-01T01:40:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28071995</td>\n",
        "      <td>158324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>OK</td>\n",
-       "      <td>73</td>\n",
-       "      <td>50</td>\n",
+       "      <td>78</td>\n",
+       "      <td>47</td>\n",
        "      <td>668</td>\n",
-       "      <td>73</td>\n",
-       "      <td>2014-08-01T07:55:00</td>\n",
-       "      <td>6</td>\n",
-       "      <td>20746392</td>\n",
+       "      <td>78</td>\n",
+       "      <td>2014-10-01T01:45:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28072438</td>\n",
        "      <td>158324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>OK</td>\n",
-       "      <td>61</td>\n",
-       "      <td>60</td>\n",
+       "      <td>76</td>\n",
+       "      <td>48</td>\n",
        "      <td>668</td>\n",
-       "      <td>61</td>\n",
-       "      <td>2014-08-01T08:00:00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>20746723</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2014-10-01T01:50:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28072887</td>\n",
        "      <td>158324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>OK</td>\n",
-       "      <td>61</td>\n",
-       "      <td>60</td>\n",
+       "      <td>76</td>\n",
+       "      <td>48</td>\n",
        "      <td>668</td>\n",
-       "      <td>61</td>\n",
-       "      <td>2014-08-01T08:05:00</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2014-10-01T01:55:00</td>\n",
        "      <td>1</td>\n",
-       "      <td>20747172</td>\n",
+       "      <td>28073334</td>\n",
        "      <td>158324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>OK</td>\n",
-       "      <td>63</td>\n",
-       "      <td>58</td>\n",
+       "      <td>60</td>\n",
+       "      <td>61</td>\n",
        "      <td>668</td>\n",
-       "      <td>63</td>\n",
-       "      <td>2014-08-01T08:10:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20747545</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2014-10-01T02:05:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28074100</td>\n",
        "      <td>158324</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -184,21 +189,21 @@
       ],
       "text/plain": [
        "  status  avg_measured_time  avg_speed  ext_id  median_measured_time  \\\n",
-       "0     OK                 74         50     668                    74   \n",
-       "1     OK                 73         50     668                    73   \n",
-       "2     OK                 61         60     668                    61   \n",
-       "3     OK                 61         60     668                    61   \n",
-       "4     OK                 63         58     668                    63   \n",
+       "0     OK                 78         47     668                    78   \n",
+       "1     OK                 78         47     668                    78   \n",
+       "2     OK                 76         48     668                    76   \n",
+       "3     OK                 76         48     668                    76   \n",
+       "4     OK                 60         61     668                    60   \n",
        "\n",
        "             timestamp  vehicle_count       _id  report_id  \n",
-       "0  2014-08-01T07:50:00              5  20746220     158324  \n",
-       "1  2014-08-01T07:55:00              6  20746392     158324  \n",
-       "2  2014-08-01T08:00:00              4  20746723     158324  \n",
-       "3  2014-08-01T08:05:00              1  20747172     158324  \n",
-       "4  2014-08-01T08:10:00              3  20747545     158324  "
+       "0  2014-10-01T01:40:00              0  28071995     158324  \n",
+       "1  2014-10-01T01:45:00              0  28072438     158324  \n",
+       "2  2014-10-01T01:50:00              1  28072887     158324  \n",
+       "3  2014-10-01T01:55:00              1  28073334     158324  \n",
+       "4  2014-10-01T02:05:00              0  28074100     158324  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +232,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
