--- a/modeling/lstm_pollution_only_1.ipynb
+++ b/modeling/lstm_pollution_only_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,14 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/0f/glx6yb212vlc0p67p0phsp180000gn/T/ipykernel_20210/2121407104.py:11: FutureWarning: The provided callable <function mean at 0x10d2df740> is currently using SeriesGroupBy.mean. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"mean\" instead.\n",
+      "  \"timestamp\").agg({\"particullate_matter\": np.mean,\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -198,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,17 +328,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/anaconda3/envs/masters/lib/python3.12/site-packages/keras/src/layers/rnn/rnn.py:204: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_33\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_33\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -342,13 +358,13 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ lstm_98 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                  │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">12</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">100</span>)        │        <span style=\"color: #00af00; text-decoration-color: #00af00\">42,000</span> │\n",
+       "│ lstm (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                     │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">12</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">100</span>)        │        <span style=\"color: #00af00; text-decoration-color: #00af00\">42,000</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_99 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                  │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">12</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">64</span>)         │        <span style=\"color: #00af00; text-decoration-color: #00af00\">42,240</span> │\n",
+       "│ lstm_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">12</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">64</span>)         │        <span style=\"color: #00af00; text-decoration-color: #00af00\">42,240</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_100 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │        <span style=\"color: #00af00; text-decoration-color: #00af00\">12,416</span> │\n",
+       "│ lstm_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │        <span style=\"color: #00af00; text-decoration-color: #00af00\">12,416</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_46 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">4</span>)              │           <span style=\"color: #00af00; text-decoration-color: #00af00\">132</span> │\n",
+       "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">4</span>)              │           <span style=\"color: #00af00; text-decoration-color: #00af00\">132</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -356,13 +372,13 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ lstm_98 (\u001b[38;5;33mLSTM\u001b[0m)                  │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m12\u001b[0m, \u001b[38;5;34m100\u001b[0m)        │        \u001b[38;5;34m42,000\u001b[0m │\n",
+       "│ lstm (\u001b[38;5;33mLSTM\u001b[0m)                     │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m12\u001b[0m, \u001b[38;5;34m100\u001b[0m)        │        \u001b[38;5;34m42,000\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_99 (\u001b[38;5;33mLSTM\u001b[0m)                  │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m12\u001b[0m, \u001b[38;5;34m64\u001b[0m)         │        \u001b[38;5;34m42,240\u001b[0m │\n",
+       "│ lstm_1 (\u001b[38;5;33mLSTM\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m12\u001b[0m, \u001b[38;5;34m64\u001b[0m)         │        \u001b[38;5;34m42,240\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ lstm_100 (\u001b[38;5;33mLSTM\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │        \u001b[38;5;34m12,416\u001b[0m │\n",
+       "│ lstm_2 (\u001b[38;5;33mLSTM\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │        \u001b[38;5;34m12,416\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_46 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m4\u001b[0m)              │           \u001b[38;5;34m132\u001b[0m │\n",
+       "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m4\u001b[0m)              │           \u001b[38;5;34m132\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -414,49 +430,33 @@
      "text": [
       "None\n",
       "Epoch 1/1000\n",
-      "153/153 - 6s - 41ms/step - loss: 16.9262 - mae: 16.9262 - val_loss: 1.3502 - val_mae: 1.3502\n",
+      "153/153 - 5s - 31ms/step - loss: 17.6782 - mae: 17.6782 - val_loss: 1.3260 - val_mae: 1.3260\n",
       "Epoch 2/1000\n",
-      "153/153 - 2s - 16ms/step - loss: 0.9712 - mae: 0.9712 - val_loss: 0.5689 - val_mae: 0.5689\n",
+      "153/153 - 3s - 21ms/step - loss: 1.2101 - mae: 1.2101 - val_loss: 0.9803 - val_mae: 0.9803\n",
       "Epoch 3/1000\n",
-      "153/153 - 3s - 18ms/step - loss: 0.7468 - mae: 0.7468 - val_loss: 0.9489 - val_mae: 0.9489\n",
+      "153/153 - 4s - 25ms/step - loss: 0.9746 - mae: 0.9746 - val_loss: 1.1587 - val_mae: 1.1587\n",
       "Epoch 4/1000\n",
-      "153/153 - 2s - 13ms/step - loss: 0.6190 - mae: 0.6190 - val_loss: 1.0735 - val_mae: 1.0735\n",
+      "153/153 - 3s - 22ms/step - loss: 0.8087 - mae: 0.8087 - val_loss: 0.8496 - val_mae: 0.8496\n",
       "Epoch 5/1000\n",
-      "153/153 - 2s - 14ms/step - loss: 0.6744 - mae: 0.6744 - val_loss: 0.6289 - val_mae: 0.6289\n",
+      "153/153 - 3s - 22ms/step - loss: 0.7938 - mae: 0.7938 - val_loss: 0.6937 - val_mae: 0.6937\n",
       "Epoch 6/1000\n",
-      "153/153 - 2s - 14ms/step - loss: 0.7299 - mae: 0.7299 - val_loss: 0.9112 - val_mae: 0.9112\n",
+      "153/153 - 3s - 21ms/step - loss: 0.7560 - mae: 0.7560 - val_loss: 0.7552 - val_mae: 0.7552\n",
       "Epoch 7/1000\n",
-      "153/153 - 2s - 14ms/step - loss: 0.7055 - mae: 0.7055 - val_loss: 0.5001 - val_mae: 0.5001\n",
+      "153/153 - 4s - 23ms/step - loss: 0.7838 - mae: 0.7838 - val_loss: 0.8093 - val_mae: 0.8093\n",
       "Epoch 8/1000\n",
-      "153/153 - 2s - 13ms/step - loss: 0.6176 - mae: 0.6176 - val_loss: 0.6284 - val_mae: 0.6284\n",
+      "153/153 - 3s - 23ms/step - loss: 0.6609 - mae: 0.6609 - val_loss: 0.7673 - val_mae: 0.7673\n",
       "Epoch 9/1000\n",
-      "153/153 - 2s - 14ms/step - loss: 0.5524 - mae: 0.5524 - val_loss: 0.4252 - val_mae: 0.4252\n",
+      "153/153 - 3s - 21ms/step - loss: 0.9102 - mae: 0.9102 - val_loss: 0.6602 - val_mae: 0.6602\n",
       "Epoch 10/1000\n",
-      "153/153 - 2s - 14ms/step - loss: 0.5647 - mae: 0.5647 - val_loss: 0.5642 - val_mae: 0.5642\n",
+      "153/153 - 3s - 19ms/step - loss: 0.6583 - mae: 0.6583 - val_loss: 0.7652 - val_mae: 0.7652\n",
       "Epoch 11/1000\n",
-      "153/153 - 2s - 15ms/step - loss: 0.6093 - mae: 0.6093 - val_loss: 0.6572 - val_mae: 0.6572\n",
-      "Epoch 12/1000\n",
-      "153/153 - 2s - 14ms/step - loss: 0.5608 - mae: 0.5608 - val_loss: 0.5044 - val_mae: 0.5044\n",
-      "Epoch 13/1000\n",
-      "153/153 - 2s - 16ms/step - loss: 0.5985 - mae: 0.5985 - val_loss: 0.4296 - val_mae: 0.4296\n",
-      "Epoch 14/1000\n",
-      "153/153 - 2s - 15ms/step - loss: 0.5964 - mae: 0.5964 - val_loss: 0.4364 - val_mae: 0.4364\n",
-      "Epoch 15/1000\n",
-      "153/153 - 2s - 15ms/step - loss: 0.5357 - mae: 0.5357 - val_loss: 0.5287 - val_mae: 0.5287\n",
-      "Epoch 16/1000\n",
-      "153/153 - 2s - 15ms/step - loss: 0.6925 - mae: 0.6925 - val_loss: 0.9139 - val_mae: 0.9139\n",
-      "Epoch 17/1000\n",
-      "153/153 - 2s - 15ms/step - loss: 0.8255 - mae: 0.8255 - val_loss: 0.4597 - val_mae: 0.4597\n",
-      "Epoch 18/1000\n",
-      "153/153 - 2s - 15ms/step - loss: 0.5214 - mae: 0.5214 - val_loss: 0.6209 - val_mae: 0.6209\n",
-      "Epoch 19/1000\n",
-      "153/153 - 2s - 16ms/step - loss: 0.5286 - mae: 0.5286 - val_loss: 0.5508 - val_mae: 0.5508\n",
-      "dict_keys(['loss', 'mae', 'val_loss', 'val_mae'])\n"
+      "153/153 - 3s - 19ms/step - loss: 0.6859 - mae: 0.6859 - val_loss: 0.5714 - val_mae: 0.5714\n",
+      "Epoch 12/1000\n"
      ]
     }
    ],
    "source": [
-    "model, history = train_lstm_model('lstm_pollution.keras',\n",
+    "model, history = train_lstm_model('../models/lstm_pollution.keras',\n",
     "                                  seq_length,\n",
     "                                  seq_arrays,\n",
     "                                  seq_labs,\n",
@@ -802,9 +802,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "usd_ai",
+   "display_name": "masters",
    "language": "python",
-   "name": "python3"
+   "name": "masters"
   },
   "language_info": {
    "codemirror_mode": {
@@ -816,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
