removed unused libraries

--- a/data_preprocessing/parking_processing.ipynb
+++ b/data_preprocessing/parking_processing.ipynb
@@ -2,14 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
-    "import os\n",
-    "import json\n",
     "\n",
     "from geopy.geocoders import Nominatim"
    ]
@@ -918,9 +916,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "masters",
+   "display_name": "usd_ai",
    "language": "python",
-   "name": "masters"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -932,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.20"
   },
   "orig_nbformat": 4
  },
