--- a/data_preprocessing/events_preprocessing.ipynb
+++ b/data_preprocessing/events_preprocessing.ipynb
@@ -14,16 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tarfile\n",
     "import pandas as pd\n",
-    "import os\n",
-    "import json\n",
-    "from pathlib import Path\n",
-    "import zipfile"
+    "from pathlib import Path\n"
    ]
   },
   {
