--- a/data_preprocessing/pollution_processing.ipynb
+++ b/data_preprocessing/pollution_processing.ipynb
@@ -12,17 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tarfile\n",
     "import pandas as pd\n",
     "import os\n",
-    "import json\n",
-    "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
-    "import zipfile\n",
     "from typing import List"
    ]
   },
@@ -551,9 +547,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "masters",
+   "display_name": "usd_ai",
    "language": "python",
-   "name": "masters"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -565,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.20"
   },
   "orig_nbformat": 4
  },
