--- a/analysis/traffic_geo_viz.ipynb
+++ b/analysis/traffic_geo_viz.ipynb
@@ -74,6 +74,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Geo visualization with traffic sensor overlays"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
