--- a/data_preprocessing/events_preprocessing.ipynb
+++ b/data_preprocessing/events_preprocessing.ipynb
@@ -18,8 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from pathlib import Path\n"
+    "import pandas as pd"
    ]
   },
   {
